--- a/style.css
+++ b/style.css
@@ -888,7 +888,7 @@ a {
         width: 50%;
     }
     .contain>.slider{
-        width: 300px;
+        width: 90%;
     }
     #banner>.sm-banner>button{
         padding: 5px;
